[REFACTOR] KeywordService 내의 sortByCategory List로 변환하는 단계 한번만 거치도록 정리